--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -88,8 +88,12 @@
     <p>이름을 입력하세요</p>
     <form action="/members/new" method="post">
         <div class="form-group">
-            <label for="name">이름</label>
-            <input type="text" id="name" name="name" placeholder="이름을 입력하세요" required>
+            <label for="username">이름</label>
+            <input type="text" id="username" name="username" placeholder="이름을 입력하세요" required>
+            <label for="password">패스워드</label>
+            <input type="password" id="password" name="password" placeholder="패스워드를 입력하세요" required>
+            <label for="email">이메일</label>
+            <input type="email" id="email" name="email" placeholder="이메일을 입력하세요" required>
         </div>
         <button type="submit" class="btn">등록</button>
         <div th:if="${errorMessage}" class="error-message">
