--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -134,8 +134,8 @@
 <div class="container">
     <!-- 로그인된 사용자 처리 -->
     <div class="sidebar" th:if="${session.loggedInUser != null}">
-        <h2>로그인</h2>
-        <h1>Welcome, <span th:text="${session.loggedInUser.username}">User</span>!</h1>
+        <img src="/DSALOGO.png" alt="Logo" style="width: 100px; height: auto;">
+        <h1><span th:text="${session.loggedInUser.username}">User</span>!</h1>
         <div class="button-row">
             <button type="button" onclick="location.href='/messages'">회원정보</button>
         </div>
@@ -147,8 +147,10 @@
 
     <!-- 로그인하지 않은 사용자 처리 -->
     <div class="sidebar" th:if="${session.loggedInUser == null}">
+        <img src="/DSALOGO.png" alt="Logo" style="width: 100px; height: auto;">
         <h2>로그인</h2>
         <form action="login" method="post">
+
             <label for="username">아이디:</label>
             <input type="text" id="username" name="username" required>
             <label for="password">비밀번호:</label>
